--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="row">
           <div class="span6 offset3">
-            <h4>Register</h4>
+            <h4>Sign Up</h4>
+            <h3 class="aligncenter textwhite">and receive your first order on us</h3>
             <%- include('../partials/flash') %>
             <%- include('../partials/authform', {formUrl: '/signup'}) %>
           </div>
