--- a/views/device/new.ejs
+++ b/views/device/new.ejs
@@ -8,6 +8,8 @@
                         <div class="form-group">
                             <label for="deviceId">Device ID</label>
                             <input type="text" class="form-control" id="deviceIdInput" placeholder="deviceId" name="deviceId">
+                            <label for="imageUrl">Device Image URL</label>
+                            <input type="text" class="form-control" id="imageUrlInput" placeholder="imageUrl" name="deviceUrl">
                         </div>
                         <select name="productId">
                     <% products.forEach(function (product) {%>
