--- a/views/partials/authform.ejs
+++ b/views/partials/authform.ejs
@@ -1,5 +1,4 @@
-<div id="contact-form">
-  <form action="<%= formUrl %>" method="POST" class="contactForm">
+  <form action="<%= formUrl %>" method="POST">
     <div class="form-group">
       <input type="email" class="form-control" placeholder="email" name="email">
     </div>
@@ -8,4 +7,3 @@
     </div>
     <button type="submit" class="btn btn-theme">Submit</button>
   </form>
-</div>
