--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,7 +127,7 @@ a.scrollup i:hover {
 }
 /*---------- forms ----------*/
 
-input[type=text], input[type=submit], textarea, input[type=email] , input[type=password] {
+input[type=text], input[type=submit], textarea, input[type=email] , input[type=password], select {
 	width: 100%;
 	padding: 1em;
 	font-size: 1.1em;
@@ -136,7 +136,7 @@ input[type=text], input[type=submit], textarea, input[type=email] , input[type=p
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 }
-input, button, select, textarea {
+input, button, select, textarea, select {
 	font-family:'Open Sans', Arial, sans-serif;
 }
 /* =========================================================
@@ -271,6 +271,14 @@ h2.pagetitle {
 	padding:15px;
 }
 .product-image{
+}
+
+.flex-it{
+	display: flex;
+	flex-wrap: wrap;
+}
+.textwhite{
+color: #ffffff;
 }
 /* =========================================================
 04. Navigation
@@ -945,7 +953,7 @@ section#about {
 	z-index: 999;
 }
 
-#contact-form input[type=text], .contactForm textarea, .contactForm input[type=email] , .contactForm input[type=password] {
+#contact-form input[type=text], .contactForm textarea, .contactForm input[type=email] , .contactForm input[type=password], select {
 	background: rgba(227, 231, 228, 1);
 	font-family: 'Open Sans', sans serif;
 	border: 0;
@@ -958,7 +966,7 @@ section#about {
 	height: 156px;
 }
 
-#contact-form input[type=text]:focus, .contactForm textarea:focus, .contactForm input[type=email]:focus, .contactForm input[type=password]:focus{
+#contact-form input[type=text]:focus, .contactForm textarea:focus, .contactForm input[type=email]:focus, .contactForm input[type=password]:focus, select:focus {
 	background: #fff;
 	color: #555;
 	box-shadow: none;
