--- a/views/order/index.ejs
+++ b/views/order/index.ejs
@@ -1,29 +1,47 @@
 <% include ../partials/header_order %>
-<section class="section green">
-    <div class="container">
-        <div class="row">
-            <% orders.forEach(function (order) { %>
-                <div class="span5 paddingsmall">
-                <div class="row">
-                <div class="span3">
-                <p><strong>Product: </strong><%= order.productId[0].title %> </p>
-                <p><strong>Name: </strong><%= order.customerId[0].fullName %> </p>
-                <p><strong>Address: </strong><%= order.customerId[0].address %> </p>
-                <p><strong>Contact Number: </strong><%= order.customerId[0].contactNumber %> </p>
-                <p><strong>Order Status : </strong>
-                <% if (order.completed == true) { %>
-                  <span class="label label-success">Completed</span>
-                  <% } else if (order.completed == false) { %>
-                    <span class="label label-danger">Processing</span>
-                    <% } %></p>
-                    <p><a class="pull-right btn btn-info" href=<%="/order/" + order._id %>>View</a></p>
-                </div>
-                <div class="span2">
-                  <img src="<%= order.productId[0].imageUrl %>" class="paddingsmall product-image" alt="<%= order.productId[0].title %>">
-                </div>
-                </div>
-                </div>
-                <% }) %>
+    <section class="section green">
+        <div class="container">
+            <div class="row flex-it">
+                <% orders.forEach(function (order) { %>
+                    <div class="span5 paddingsmall">
+                        <div class="row">
+                            <div class="span3">
+                                <p><strong>Product: </strong>
+                                    <%= order.productId[0].title %>
+                                </p>
+                                <p><strong>Name: </strong>
+                                    <%= order.customerId[0].fullName %>
+                                </p>
+                                <p><strong>Address: </strong>
+                                    <%= order.customerId[0].address %>
+                                </p>
+                                <p><strong>Contact Number: </strong>
+                                    <%= order.customerId[0].contactNumber %>
+                                </p>
+                                <p><strong>Order Status : </strong>
+                                    <% if (order.completed == true) { %>
+                                        <span class="label label-success">Completed</span>
+                                        <% } else if (order.completed == false) { %>
+                                            <span class="label label-danger">Processing</span>
+                                            <% } %>
+                                </p>
+                                <p><strong>Payment Status: </strong>
+                                    <% if (order.cancelOrder == true) { %>
+                                        <span class="label label-important">Cancelled</span>
+                                        <% } else if (order.cancelOrder == false) { %>
+                                            <span class="label label-success">Live</span>
+                                            <% } %>
+                                </p>
+                                <a href="<%="/order/" + order._id %>"><button class="btn btn-info"><i class="icon-eye-open"></i>View</button></a>
+
+                                <a href="<%="/order/" + order._id + "/edit" %>"<button class="btn btn-primary"><i class="icon-pencil"></i>Edit</button></a>
+                            </div>
+                            <div class="span2">
+                                <img src="<%= order.productId[0].imageUrl %>" class="paddingsmall product-image" alt="<%= order.productId[0].title %>">
+                            </div>
+                        </div>
+                    </div>
+                    <% }) %>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
