--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,24 +1,27 @@
 <footer>
-<div class="container">
-  <div class="row">
-    <div class="span6 offset3">
-      <p class="copyright">
-        &copy; John Ang. Pronto Ordering System. All rights reserved.
-      </p>
-      <p class="copyright">
-        &copy; Maxim Theme. All rights reserved.
-                <div class="credits">
-                    <!--
+    <div class="container">
+        <div class="row">
+            <div class="span6 offset3">
+                <p class="copyright">
+                    &copy; Pronto Ordering System. All rights reserved.
+                </p>
+                <p class="copyright">
+                    &copy; John Ang, Full Stack Web Developer. General Assemby Graduate. Contact me on <a href="https://github.com/johnacs" target="_blank"> Github</a>
+                </p>
+                <p class="copyright">
+                    &copy; Maxim Theme. All rights reserved.
+                    <div class="credits">
+                        <!--
                         All the links in the footer should remain intact.
                         You can delete the links only if you purchased the pro version.
                         Licensing information: https://bootstrapmade.com/license/
                         Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Maxim
                     -->
-                    <a href="https://bootstrapmade.com/">Free Bootstrap Themes</a> by BootstrapMade.com
-                </div>
-      </p>
+                        <a href="https://bootstrapmade.com/">Free Bootstrap Themes</a> by BootstrapMade.com
+                    </div>
+                </p>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
-<!-- ./container -->
+    <!-- ./container -->
 </footer>
