--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,9 +12,8 @@
 				<ul id="menu-main" class="nav">
 					<%if (!authenticated) { %>
 					<li><a title="about" href="/#about">About</a></li>
-					<li><a title="features" href="/#features">Features</a></li>
+					<li><a title="how it works" href="/#howitworks">How it works</a></li>
 					<li><a title="products" href="/#products">Products</a></li>
-					<li><a title="sign up" href="/#contact">Sign Up</a></li>
 					<% } %>
 					<%if (authenticated) { %>
 						<li class="dropdown">
@@ -49,8 +48,8 @@
 				 </li>
 					<% } %>
 					<%if (!authenticated) { %>
+						<li><a href="/signup">Sign up now</a></li>
 						<li><a href="/login">Admin Login</a></li>
-						<li><a href="/signup">Register now</a></li>
 							<% } else {%>
 						<li><a href="#"><%=userdata.local.email%></a></li>
 							<li><a href="/logout">Logout</a></li>
