--- a/views/order/index.ejs
+++ b/views/order/index.ejs
@@ -1,6 +1,7 @@
 <% include ../partials/header_order %>
     <section class="section green">
         <div class="container">
+          <%- include('../partials/flash') %>
             <div class="row flex-it">
                 <% orders.forEach(function (order) { %>
                     <div class="span5 paddingsmall">
