--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,14 +36,14 @@
 <section id="about" class="spacer orange">
     <div class="container">
         <div class="row">
-            <div class="span6 alignright flyLeft">
+            <div class="span7 alignright flyLeft">
                 <blockquote class="large">
                     What is it?
                 </blockquote>
                 <h3 class="textwhite">Pronto is a Wi-Fi connected device that reorders your favorite coffee with the press of a button. Each Pronto is paired with a coffee of your choice.</h3>
             </div>
-            <div class="span6 aligncenter flyRight">
-                <i class="icon-coffee icon-10x"></i>
+            <div class="span3 aligncenter flyRight">
+                <img src="/images/devices/mocha.png" alt="Pronto device">
             </div>
         </div>
     </div>
@@ -53,7 +53,7 @@
 <section id="about" class="spacer green">
     <div class="container">
         <div class="row">
-          <div class="span6 aligncenter flyLeft">
+          <div class="span4 aligncenter flyLeft">
             <i class="icon-coffee icon-10x"></i>
           </div>
             <div class="span6 alignright flyRight">
