--- a/views/product/edit.ejs
+++ b/views/product/edit.ejs
@@ -1,9 +1,9 @@
 <% include ../partials/header_product %>
     <section class="section green">
         <div class="container">
+          <h1 class="page-header">Edit Product</h1>
             <div class="row">
-              <div class="span8">
-                <h1 class="page-header">Edit Product</h1>
+              <div class="span5">
                 <form action=<%="/product/" + product.id + "?_method=PUT" %> method="POST">
                     <div class="form-group">
                         <label for="title">Title</label>
@@ -19,6 +19,9 @@
                     </div>
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
+              </div>
+              <div class="span5">
+                <a href=<%="/product/" + product._id + "/edit" %>><img src="<%= product.imageUrl %>" class="product-image" alt="<%= product.title %>"></a>
               </div>
             </div>
         </div>
