--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,7 +80,7 @@
             <div class="span3 animated-fast flyIn aligncenter">
               <div class="service-box">
                 <i class="icon-cloud-upload icon-5x icon-white"></i>
-                <h3 class="textwhite">Order process through the cloud</h3>
+                <h3 class="textwhite">Order sent through the cloud</h3>
               </div>
             </div>
             <div class="span3 animated-fast flyIn aligncenter">
