--- a/public/css/style.css
+++ b/public/css/style.css
@@ -523,7 +523,7 @@ section.spacer.bg2 {
 }
 
 section.spacer.bg3 {
-	background: url(../images/coffee.jpg) 50% 0 no-repeat fixed;
+	background: url(../images/coffee3.jpg) 50% 0 no-repeat fixed;
 	width:100%;
 	height:auto;
 	margin:0;
