--- a/public/css/style.css
+++ b/public/css/style.css
@@ -516,7 +516,7 @@ section.spacer {
 }
 
 section.spacer.bg2 {
-	background: url(../img/bg/bg-2.jpg) 50% 0 no-repeat fixed;
+	background: url(../images/coffee2.jpg) 50% 0 no-repeat fixed;
 	width:100%;
 	height:auto;
 	margin:0;
